# ethbmc-plus

./: .gitignore  Cargo.toml  README.md
esvm/: Cargo.toml
esvm/contracts/: Cargo.toml
esvm/src/: bytecode.rs  disasm.rs  lib.rs  main.rs
esvm/src/se/: config.rs  env.rs  symbolic_analysis.rs  symbolic_graph.rs  symbolic_state.rs
esvm/src/se/expr/: bval.rs  formel_builder.rs  solver.rs  symbolic_memory.rs  z3.rs
esvm/src/se/symbolic_executor/: call_ops.rs  memory_ops.rs
evmexec/: Cargo.toml
evmexec/ethereum-newtypes/: Cargo.toml
evmexec/ethereum-newtypes/src/: lib.rs
evmexec/src/: evm.rs  evmtrace.rs  genesis.rs  lib.rs  revm.rs
evmexec/tests/: multiple_transactions_test.rs
forge-runner/: Cargo.toml
forge-runner/src/: custom_runner.rs  custom_tester.rs  filter.rs  lib.rs
parity_connector/: Cargo.toml
parity_connector/src/: client.rs  lib.rs  main.rs  types.rs
