[package]
name = "esvm"
version = "0.1.0"
authors = [""]
edition = "2024"

[dependencies]
reqwest = { workspace = true }
rayon = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
tiny-keccak = { workspace = true }
log = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
petgraph = { workspace = true }
subprocess = { workspace = true }
ena = { workspace = true }
yaml-rust = { workspace = true }
bitflags = { workspace = true }
fern = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
clap = { workspace = true }
hexdecode = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
revm = { workspace = true }

evmexec = { path = "../evmexec", features = ["verbose"] }
forge-runner = { path = "../forge-runner" }

[dependencies.uint]
version = "0.4"
features = ["std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "ethbmc-plus"
path = "src/main.rs"

[dev-dependencies]
contracts = { path = "contracts" }

[features]
default = ["calls", "keccak", "memcopy"]

# compile with statistics features
stats = []

# compile with call simulation
calls = []

# compile with keccak handling
keccak = []

# compile with theory of memcopy utilised
memcopy = []
