[package]
name = "evmexec"
version = "0.1.0"
authors = [""]
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde_derive = "1.0.219"
serde = "1.0.219"
tempfile = "3.0"
regex = "1"
hexdecode = "0.2"
subprocess = "0.1"
log = "0.4"
lazy_static = "1.1"
revm = { version = "22.0.1", features = ["serde", "serde-json"] }

[dependencies.uint]
version = "0.4"
features = ["std"]

[dev-dependencies]
maplit = "1.0"

[features]
# verbose error output during some operations, e.g., state parsing, this requires some allocations, thus it is disabled by default
verbose = []
