[package]
name = "evmexec"
version = "0.1.0"
authors = [""]
edition = "2024"

[dependencies]
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
uint = { workspace = true }
hexdecode = { workspace = true }
subprocess = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
revm = { workspace = true }

[dev-dependencies]
maplit = "1.0"

[features]
# verbose error output during some operations, e.g., state parsing, this requires some allocations, thus it is disabled by default
verbose = []
