[package]
name = "forge-runner"
version = "0.0.1"
authors = [""]
edition = "2024"

[[bin]]
name = "forge-tester"
path = "bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
alloy-json-abi = { workspace = true }
# keeping clap version separate since ethbmc-plus still uses an older version
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_complete_fig = "4"
eyre = { workspace = true }
foundry-compilers = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
revm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# The foundry-based dependencies are not published crates
forge = { git = "https://github.com/foundry-rs/foundry", rev = "377d6bc31a416ce980ef0dc05631baf0b5b563fe" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", rev = "377d6bc31a416ce980ef0dc05631baf0b5b563fe" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "377d6bc31a416ce980ef0dc05631baf0b5b563fe" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "377d6bc31a416ce980ef0dc05631baf0b5b563fe" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "377d6bc31a416ce980ef0dc05631baf0b5b563fe" }
foundry-linking = { git = "https://github.com/foundry-rs/foundry", rev = "377d6bc31a416ce980ef0dc05631baf0b5b563fe" }

esvm = { path = "../esvm" }
