[package]
name = "parity_connector"
version = "0.1.0"
authors = [""]
edition = "2024"

[dependencies]
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
clap = "2.32.0"
futures = "0.1.25"
serde = "1.0.197"
serde_json = "1.0.114"
serde_derive = "1.0.197"
serde_test = "1.0.114"
revm = { version = "22.0.1", features = ["serde", "serde-json"] }

[dependencies.uint]
version = "0.4"
features = ["std"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "paritycli"
